# egmlib

./: .copier-answers.yml  README.md  pyproject.toml
requirements/: dev-requirements.txt
src/egmlib/: preprocess.py
